// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TimePicker not render clean icon when allowClear is false 1`] = `
<div
  class="ant-picker ant-picker-outlined css-var-root ant-picker-css-var"
>
  <div
    class="ant-picker-input"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      placeholder="Select time"
      size="10"
      value="00:00:00"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-hidden="true"
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimePicker prop locale should works 1`] = `
Array [
  <div
    class="ant-picker ant-picker-outlined css-var-root ant-picker-css-var"
  >
    <div
      class="ant-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Select time"
        size="10"
        value="00:00:00"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-hidden="true"
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
      <button
        aria-label="Clear"
        class="ant-picker-clear"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-picker-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-var-root ant-picker-css-var ant-picker-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-picker-panel-container ant-picker-time-panel-container"
      style="margin-left: 0px; margin-right: auto;"
      tabindex="-1"
    >
      <div
        class="ant-picker-panel-layout"
      >
        <div>
          <div
            class="ant-picker-panel"
            tabindex="0"
          >
            <div
              class="ant-picker-time-panel"
            >
              <div
                class="ant-picker-content"
              >
                <ul
                  aria-label="Select an hour"
                  class="ant-picker-time-panel-column"
                  data-type="hour"
                  role="listbox"
                >
                  <li
                    aria-disabled="false"
                    aria-label="0 hours"
                    aria-selected="true"
                    class="ant-picker-time-panel-cell ant-picker-time-panel-cell-selected"
                    data-value="0"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      00
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="1 hour"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="1"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      01
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="2 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="2"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      02
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="3 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="3"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      03
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="4 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="4"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      04
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="5 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="5"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      05
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="6 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="6"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      06
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="7 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="7"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      07
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="8 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="8"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      08
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="9 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="9"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      09
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="10 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="10"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      10
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="11 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="11"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      11
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="12 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="12"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      12
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="13 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="13"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      13
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="14 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="14"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      14
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="15 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="15"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      15
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="16 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="16"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      16
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="17 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="17"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      17
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="18 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="18"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      18
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="19 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="19"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      19
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="20 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="20"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      20
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="21 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="21"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      21
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="22 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="22"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      22
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="23 hours"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="23"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      23
                    </div>
                  </li>
                </ul>
                <ul
                  aria-label="Select a minute"
                  class="ant-picker-time-panel-column"
                  data-type="minute"
                  role="listbox"
                >
                  <li
                    aria-disabled="false"
                    aria-label="0 minutes"
                    aria-selected="true"
                    class="ant-picker-time-panel-cell ant-picker-time-panel-cell-selected"
                    data-value="0"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      00
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="1 minute"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="1"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      01
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="2 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="2"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      02
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="3 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="3"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      03
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="4 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="4"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      04
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="5 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="5"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      05
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="6 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="6"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      06
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="7 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="7"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      07
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="8 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="8"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      08
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="9 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="9"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      09
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="10 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="10"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      10
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="11 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="11"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      11
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="12 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="12"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      12
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="13 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="13"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      13
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="14 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="14"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      14
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="15 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="15"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      15
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="16 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="16"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      16
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="17 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="17"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      17
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="18 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="18"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      18
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="19 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="19"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      19
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="20 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="20"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      20
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="21 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="21"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      21
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="22 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="22"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      22
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="23 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="23"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      23
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="24 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="24"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      24
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="25 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="25"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      25
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="26 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="26"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      26
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="27 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="27"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      27
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="28 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="28"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      28
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="29 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="29"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      29
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="30 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="30"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      30
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="31 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="31"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      31
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="32 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="32"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      32
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="33 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="33"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      33
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="34 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="34"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      34
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="35 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="35"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      35
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="36 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="36"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      36
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="37 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="37"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      37
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="38 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="38"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      38
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="39 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="39"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      39
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="40 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="40"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      40
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="41 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="41"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      41
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="42 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="42"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      42
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="43 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="43"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      43
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="44 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="44"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      44
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="45 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="45"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      45
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="46 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="46"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      46
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="47 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="47"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      47
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="48 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="48"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      48
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="49 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="49"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      49
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="50 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="50"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      50
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="51 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="51"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      51
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="52 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="52"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      52
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="53 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="53"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      53
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="54 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="54"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      54
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="55 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="55"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      55
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="56 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="56"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      56
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="57 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="57"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      57
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="58 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="58"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      58
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="59 minutes"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="59"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      59
                    </div>
                  </li>
                </ul>
                <ul
                  aria-label="Select a second"
                  class="ant-picker-time-panel-column"
                  data-type="second"
                  role="listbox"
                >
                  <li
                    aria-disabled="false"
                    aria-label="0 seconds"
                    aria-selected="true"
                    class="ant-picker-time-panel-cell ant-picker-time-panel-cell-selected"
                    data-value="0"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      00
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="1 second"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="1"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      01
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="2 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="2"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      02
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="3 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="3"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      03
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="4 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="4"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      04
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="5 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="5"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      05
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="6 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="6"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      06
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="7 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="7"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      07
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="8 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="8"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      08
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="9 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="9"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      09
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="10 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="10"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      10
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="11 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="11"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      11
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="12 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="12"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      12
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="13 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="13"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      13
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="14 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="14"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      14
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="15 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="15"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      15
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="16 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="16"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      16
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="17 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="17"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      17
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="18 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="18"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      18
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="19 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="19"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      19
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="20 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="20"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      20
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="21 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="21"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      21
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="22 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="22"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      22
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="23 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="23"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      23
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="24 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="24"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      24
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="25 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="25"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      25
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="26 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="26"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      26
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="27 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="27"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      27
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="28 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="28"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      28
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="29 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="29"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      29
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="30 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="30"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      30
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="31 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="31"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      31
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="32 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="32"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      32
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="33 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="33"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      33
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="34 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="34"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      34
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="35 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="35"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      35
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="36 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="36"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      36
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="37 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="37"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      37
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="38 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="38"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      38
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="39 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="39"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      39
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="40 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="40"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      40
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="41 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="41"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      41
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="42 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="42"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      42
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="43 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="43"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      43
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="44 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="44"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      44
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="45 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="45"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      45
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="46 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="46"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      46
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="47 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="47"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      47
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="48 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="48"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      48
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="49 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="49"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      49
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="50 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="50"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      50
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="51 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="51"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      51
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="52 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="52"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      52
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="53 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="53"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      53
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="54 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="54"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      54
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="55 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="55"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      55
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="56 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="56"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      56
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="57 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="57"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      57
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="58 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="58"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      58
                    </div>
                  </li>
                  <li
                    aria-disabled="false"
                    aria-label="59 seconds"
                    aria-selected="false"
                    class="ant-picker-time-panel-cell"
                    data-value="59"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="ant-picker-time-panel-cell-inner"
                    >
                      59
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="ant-picker-footer"
          >
            <ul
              class="ant-picker-ranges"
            >
              <li
                class="ant-picker-now"
              >
                <a
                  aria-disabled="false"
                  class="ant-picker-now-btn"
                >
                  Now
                </a>
              </li>
              <li
                class="ant-picker-ok"
              >
                <button
                  class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
                  type="button"
                >
                  <span>
                    OK
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TimePicker rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker ant-picker-rtl ant-picker-outlined css-var-root ant-picker-css-var"
>
  <div
    class="ant-picker-input"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      placeholder="Select time"
      size="10"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-hidden="true"
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimePicker should support bordered 1`] = `
<div
  class="ant-picker ant-picker-borderless custom-class css-var-root ant-picker-css-var"
>
  <div
    class="ant-picker-input"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      placeholder="Select time"
      size="10"
      value="00:00:00"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-hidden="true"
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
    <button
      aria-label="Clear"
      class="ant-picker-clear"
      type="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
